--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,6 @@
 * {
   box-sizing: border-box;
-  margin: 0px;
+  margin: 0;
   font-family: "Times New Roman", Times, serif;
   padding: 0;
 }
-
-:root ;
