--- a/styles.css
+++ b/styles.css
@@ -8,4 +8,11 @@
 :root {
   --main-background-colour: rgb(114, 114, 234);
   --button-colour: rgb(88, 88, 211);
+  --button-font: Georgia, "Times New Roman", Times, serif;
+}
+
+main {
+  padding-bottom: 40px;
+  padding-top: 40px;
+  background-color: rgb(210, 210, 220);
 }
