--- a/components/card.css
+++ b/components/card.css
@@ -5,14 +5,7 @@
   text-align: center;
   padding: 10px;
   position: relative;
-}
-
-.question-card-1 {
-  margin-top: 70px;
-}
-
-.question-card-10 {
-  margin-bottom: 80px;
+  background-color: white;
 }
 
 .tag-container {
@@ -31,4 +24,8 @@
   height: auto;
   right: -2px;
   top: -5px;
+}
+
+.question-title {
+  font-family: var(--button-font);
 }
