--- a/components/header.css
+++ b/components/header.css
@@ -1,8 +1,10 @@
 .title {
   text-align: center;
+  text-transform: uppercase;
   background-color: var(--main-background-colour);
+  color: var(--title-colour);
   position: fixed;
-  padding: 5px;
+  padding: 10px;
   top: 0px;
   width: 100vw;
   z-index: 1;
