--- a/components/card.css
+++ b/components/card.css
@@ -1,6 +1,5 @@
 .question-card {
   margin: 30px;
-  border: 1px solid;
   border-radius: 10px;
   text-align: center;
   padding: 10px;
@@ -12,12 +11,18 @@
 .tag-container {
   display: flex;
   justify-content: flex-start;
-  gap: 10px;
+  gap: 6px;
+  background-color: var(--background);
+  margin-top: 15px;
+  border-radius: 10px;
 }
 
 .tag {
   font-size: 0.6rem;
+  font-family: var(--button-font);
   font-style: italic;
+  padding-top: 4px;
+  padding-bottom: 4px;
 }
 
 .bookmark-transparent {
@@ -30,6 +35,7 @@
 
 .question-title {
   font-family: var(--button-font);
+  font-size: 0.8rem;
   text-transform: uppercase;
   letter-spacing: 1.5px;
 }
