--- a/components/navigation.css
+++ b/components/navigation.css
@@ -7,11 +7,10 @@
   bottom: 0;
   width: 100vw;
   background-color: var(--main-background-colour);
-
   border-radius: 15px;
 }
 
-.footer {
+.footer--icon {
   width: 20px;
   height: auto;
 }
