--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,5 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: "Times New Roman", Times, serif;
-}
-
-:root {
-  --background: rgb(233, 236, 193);
-  --main-background-colour: rgb(192, 98, 197);
-  --button-colour: rgb(206, 140, 206);
-  --button-font: Georgia, "Times New Roman", Times, serif;
-  --title-colour: white;
-}
-
-body {
-  padding-bottom: 40px;
-  padding-top: 70px;
-  background-color: var(--background);
-}
+@import "./components/header.css";
+@import "./components/card.css";
+@import "./components/navigation.css";
+@import "./components/button.css";
+@import "./global.css";
