--- a/components/card.css
+++ b/components/card.css
@@ -1,11 +1,20 @@
 .question-card {
-  margin: 30px;
   border-radius: 10px;
   text-align: center;
   padding: 10px;
   position: relative;
   background-color: white;
   box-shadow: 3px 3px 6px grey;
+  max-width: 700px;
+}
+
+.question-container {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+
+  margin: 30px 20px 20px 20px;
+  gap: 25px;
 }
 
 .tag-container {
