--- a/components/button.css
+++ b/components/button.css
@@ -1,15 +1,14 @@
 button {
-  background-color: var(--button-colour);
   font-family: var(--button-font);
   text-transform: uppercase;
-  color: var(--title-colour);
-  font-size: 0.6rem;
-  margin-top: 15px;
+
+  font-size: 0.8rem;
+  margin-top: 25px;
   padding: 5px;
   border-radius: 15px;
-  border: 0;
+  border: 1px solid;
 }
 
 button:hover {
-  background-color: rgb(231, 224, 84);
+  background-color: var(--button-colour);
 }
