--- a/components/card.css
+++ b/components/card.css
@@ -1,7 +1,7 @@
 .question-card {
   border-radius: 10px;
   text-align: center;
-  padding: 10px;
+  padding: 40px;
   position: relative;
   background-color: white;
   box-shadow: 3px 3px 6px grey;
@@ -29,15 +29,15 @@
 .tag {
   font-size: 0.6rem;
   font-family: var(--button-font);
-  background-color: var(--background);
+
   font-style: italic;
   padding-top: 4px;
-  padding-bottom: 4px;
+  padding-bottom: 2px;
 }
 
 .bookmark-transparent {
   position: absolute;
-  width: 20px;
+  width: 35px;
   height: auto;
   right: -2px;
   top: -10px;
@@ -45,7 +45,56 @@
 
 .question-title {
   font-family: var(--button-font);
-  font-size: 0.8rem;
+
   text-transform: uppercase;
   letter-spacing: 1.5px;
+}
+
+.profile-grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 15px;
+}
+
+.profile-pic {
+  max-width: 40vw;
+  height: auto;
+  padding-left: 15px;
+  padding-top: 40px;
+  align-self: center;
+  justify-self: left;
+}
+
+.profile-text {
+  padding: 0 15px 25px 15px;
+  font-family: var(--button-font);
+  grid-column: 1/3;
+  justify-self: left;
+}
+
+.profile-title-name {
+  font-family: var(--button-font);
+  text-transform: uppercase;
+
+  align-self: center;
+  justify-self: left;
+}
+
+.profile-title-about {
+  padding-left: 15px;
+  font-family: var(--button-font);
+  align-self: center;
+  justify-self: left;
+}
+
+@media (max-width: 460px) {
+  .question-container {
+    margin: 70px 20px 20px 20px;
+  }
+  .profile-grid-container {
+    margin-top: 50px;
+  }
+  .profile-pic {
+    max-width: 60vw;
+  }
 }
