--- a/components/header.css
+++ b/components/header.css
@@ -1,12 +1,13 @@
 .title {
   text-transform: uppercase;
+  font-size: 2.8rem;
   text-align: center;
-  font-family: "Courier New", Courier, monospace;
-  text-shadow: 2px 2px 4px rgb(78, 78, 121);
+  font-family: Georgia, "Times New Roman", Times, serif;
+  /*text-shadow: 2px 2px 4px rgb(78, 78, 121);*/
   background-color: var(--main-background-colour);
   color: var(--title-colour);
   position: fixed;
-  padding: 10px;
+  padding: 8px;
   top: 0px;
   box-shadow: 2px 2px 4px rgb(80, 12, 103);
   width: 100vw;
