--- a/components/card.css
+++ b/components/card.css
@@ -66,10 +66,15 @@
 }
 
 .profile-text {
-  padding: 0 15px 25px 15px;
+  padding: 15px;
   font-family: var(--button-font);
   grid-column: 1/3;
   justify-self: left;
+  border-radius: 10px;
+  background-color: white;
+  box-shadow: 3px 3px 6px grey;
+  max-width: 700px;
+  margin: 0 15px 0 15px;
 }
 
 .profile-title-name {
@@ -81,7 +86,7 @@
 }
 
 .profile-title-about {
-  padding-left: 15px;
+  padding-left: 20px;
   font-family: var(--button-font);
   align-self: center;
   justify-self: left;
